--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,15 @@ repositories {
 }
 
 dependencies {
+    // Dependency cho ứng dụng web
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    // Dependency cho Thymeleaf nếu bạn dùng giao diện
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    // Dependency cho validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // DevTools giúp hot-reload khi phát triển
+    implementation 'org.springframework.boot:spring-boot-devtools'
+
     implementation 'com.google.code.gson:gson:2.12.1'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
